[gd_scene load_steps=7 format=3 uid="uid://bj0x2l5tqar1f"]

[ext_resource type="Script" uid="uid://rt2qgei5tpb4" path="res://start.gd" id="1_oiuna"]
[ext_resource type="Texture2D" uid="uid://c7qp1w3s2uxcy" path="res://world/background_3.png" id="2_4a3qj"]
[ext_resource type="Texture2D" uid="uid://dw3fxj0u1rcjh" path="res://world/background_2.png" id="3_g38d0"]
[ext_resource type="Texture2D" uid="uid://b2m67ncrbpavw" path="res://world/background_1.png" id="4_pob1m"]
[ext_resource type="PackedScene" uid="uid://6bjjgu2swumr" path="res://world/building.tscn" id="5_gophc"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_am31m"]
bg_color = Color(0.6428275, 0.71771383, 0.44065267, 1)

[node name="Start" type="Panel"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_am31m")
script = ExtResource("1_oiuna")

[node name="Background" type="Node2D" parent="."]

[node name="Parallax2D" type="Parallax2D" parent="Background"]
scroll_scale = Vector2(0.3, 0.3)
repeat_size = Vector2(208, 0)
repeat_times = 4

[node name="Background3" type="Sprite2D" parent="Background/Parallax2D"]
position = Vector2(330, 124)
texture = ExtResource("2_4a3qj")

[node name="Parallax2D2" type="Parallax2D" parent="Background"]
scroll_scale = Vector2(0.6, 0.6)
repeat_size = Vector2(208, 0)
repeat_times = 4

[node name="Background2" type="Sprite2D" parent="Background/Parallax2D2"]
position = Vector2(330, 92)
texture = ExtResource("3_g38d0")

[node name="Parallax2D3" type="Parallax2D" parent="Background"]
scroll_scale = Vector2(0.8, 0.8)
scroll_offset = Vector2(-54, 72)
repeat_size = Vector2(208, 0)
repeat_times = 4

[node name="Background1" type="Sprite2D" parent="Background/Parallax2D3"]
position = Vector2(330, 64)
texture = ExtResource("4_pob1m")

[node name="Polygon2D" type="Polygon2D" parent="Background"]
position = Vector2(0, 108)
scale = Vector2(4, 4)
color = Color(0.13333334, 0.14901961, 0.09411765, 1)
polygon = PackedVector2Array(381.75, 21.5, -204.25, 24.25, -252, 252.5, 373.5, 319.75)

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -67.5
offset_top = 21.0
offset_right = 67.5
offset_bottom = 45.0
grow_horizontal = 2
theme_override_constants/outline_size = 8
text = "Atomic flash"
horizontal_alignment = 1

[node name="Building" parent="." instance=ExtResource("5_gophc")]
position = Vector2(108, 72)
width = 7

[node name="Building6" parent="." instance=ExtResource("5_gophc")]
position = Vector2(-36, 144)
width = 13

[node name="Building2" parent="." instance=ExtResource("5_gophc")]
position = Vector2(468, 90)
width = 9

[node name="Building3" parent="." instance=ExtResource("5_gophc")]
position = Vector2(576, 144)
width = 8

[node name="Building4" parent="." instance=ExtResource("5_gophc")]
position = Vector2(468, 270)
width = 8

[node name="Building5" parent="." instance=ExtResource("5_gophc")]
position = Vector2(180, 306)
width = 13

[node name="StartButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -44.0
offset_top = 16.0
offset_right = 44.0
offset_bottom = 44.0
grow_horizontal = 2
grow_vertical = 2
text = " start game "

[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
